--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -200,7 +200,7 @@
      <string>打开串口</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="comNameEdit">
+   <widget class="QLineEdit" name="portEdit">
     <property name="geometry">
      <rect>
       <x>120</x>
@@ -210,7 +210,7 @@
      </rect>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
@@ -262,7 +262,7 @@
      </rect>
     </property>
     <property name="readOnly">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
