--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>170</y>
+     <y>140</y>
      <width>541</width>
      <height>251</height>
     </rect>
@@ -278,6 +278,19 @@
      <string>开始读取</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="infoLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>410</y>
+     <width>541</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
