修改界面属性

--- a/boltDetect/res/boltdetect.ui
+++ b/boltDetect/res/boltdetect.ui
@@ -167,6 +167,15 @@
       <height>30</height>
      </rect>
     </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="goodNumEdit">
     <property name="geometry">
@@ -176,6 +185,15 @@
       <width>120</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLineEdit" name="badNumEdit">
@@ -187,6 +205,15 @@
       <height>30</height>
      </rect>
     </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="goodPercentEdit">
     <property name="geometry">
@@ -196,6 +223,15 @@
       <width>120</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="text">
+     <string>0.000</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
