--- a/glassDetect/res/glassdetectdlg.ui
+++ b/glassDetect/res/glassdetectdlg.ui
@@ -32,8 +32,8 @@
   <widget class="QPushButton" name="paramSettingBtn">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>240</y>
+     <x>300</x>
+     <y>550</y>
      <width>170</width>
      <height>50</height>
     </rect>
@@ -45,8 +45,8 @@
   <widget class="QPushButton" name="StartBtn">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>320</y>
+     <x>300</x>
+     <y>610</y>
      <width>170</width>
      <height>50</height>
     </rect>
@@ -58,8 +58,8 @@
   <widget class="QPushButton" name="stopBtn">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>410</y>
+     <x>300</x>
+     <y>670</y>
      <width>170</width>
      <height>50</height>
     </rect>
@@ -68,39 +68,13 @@
     <string>停止检测</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>40</y>
-     <width>80</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>产品编号:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>530</x>
-     <y>110</y>
-     <width>80</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>订单编号:</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>200</y>
+     <x>10</x>
+     <y>520</y>
      <width>271</width>
-     <height>311</height>
+     <height>201</height>
     </rect>
    </property>
    <property name="title">
@@ -123,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>100</y>
+      <y>80</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -136,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>170</y>
+      <y>120</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -149,7 +123,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
+      <y>160</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -181,7 +155,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>100</y>
+      <y>80</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -200,7 +174,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>170</y>
+      <y>120</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -219,7 +193,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>240</y>
+      <y>160</y>
       <width>120</width>
       <height>30</height>
      </rect>
@@ -251,178 +225,183 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="productIDLabel">
+  <widget class="QLabel" name="dstImageLabel">
    <property name="geometry">
     <rect>
-     <x>600</x>
-     <y>40</y>
-     <width>400</width>
-     <height>30</height>
+     <x>520</x>
+     <y>10</y>
+     <width>500</width>
+     <height>500</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 0, 0);</string>
+    <string notr="true">background-color: rgb(192, 192, 192);</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="orderIDLabel">
+  <widget class="QPushButton" name="loadImageBtn">
    <property name="geometry">
     <rect>
-     <x>600</x>
-     <y>110</y>
-     <width>400</width>
+     <x>940</x>
+     <y>560</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>...</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="imagePathEdit">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>560</y>
+     <width>340</width>
      <height>30</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 0, 0);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
   </widget>
-  <widget class="QLabel" name="sampleViewLabel">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>520</y>
-     <width>200</width>
-     <height>200</height>
+     <x>520</x>
+     <y>560</y>
+     <width>60</width>
+     <height>30</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);</string>
-   </property>
    <property name="text">
-    <string/>
+    <string>图片路径:</string>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>520</y>
-     <width>311</width>
-     <height>201</height>
+     <x>510</x>
+     <y>610</y>
+     <width>501</width>
+     <height>111</height>
     </rect>
    </property>
    <property name="title">
-    <string>控制参数</string>
+    <string>数据:</string>
    </property>
-   <widget class="QLabel" name="badSerialLabel">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>50</width>
+      <width>40</width>
       <height>30</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 255, 0);</string>
-    </property>
     <property name="text">
-     <string/>
+     <string>Min</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_12">
+   <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>40</x>
       <y>30</y>
       <width>100</width>
       <height>30</height>
      </rect>
     </property>
-    <property name="text">
-     <string>连续排除数(个):</string>
-    </property>
    </widget>
-   <widget class="QLabel" name="label_13">
+   <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>80</y>
+      <x>40</x>
+      <y>70</y>
       <width>100</width>
       <height>30</height>
      </rect>
     </property>
-    <property name="text">
-     <string>吹气时间 (毫秒):</string>
-    </property>
    </widget>
-   <widget class="QLabel" name="label_14">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>120</y>
-      <width>110</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>包装机联机状态:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="packMatineStatusLabel">
+   <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>120</y>
-      <width>50</width>
+      <y>70</y>
+      <width>40</width>
       <height>30</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 255, 0);</string>
-    </property>
     <property name="text">
-     <string/>
+     <string>Max</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_16">
+   <widget class="QLineEdit" name="lineEdit_3">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>160</y>
+      <x>200</x>
+      <y>30</y>
       <width>100</width>
       <height>30</height>
      </rect>
     </property>
-    <property name="text">
-     <string>包装数目(个):</string>
-    </property>
    </widget>
-   <widget class="QLineEdit" name="badSeriesEdit">
+   <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>160</x>
       <y>30</y>
-      <width>120</width>
+      <width>40</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Mean</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>70</y>
+      <width>100</width>
       <height>30</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="blowTimeEdit">
+   <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>80</y>
-      <width>120</width>
+      <x>160</x>
+      <y>70</y>
+      <width>40</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Diff</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_5">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>30</y>
+      <width>100</width>
       <height>30</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="packNumEdit">
+   <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>160</y>
-      <width>120</width>
+      <x>320</x>
+      <y>30</y>
+      <width>65</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="text">
+     <string>Eevaluate</string>
     </property>
    </widget>
   </widget>
