--- a/glassDetect/res/glassdetectdlg.ui
+++ b/glassDetect/res/glassdetectdlg.ui
@@ -32,10 +32,10 @@
   <widget class="QPushButton" name="paramSettingBtn">
    <property name="geometry">
     <rect>
-     <x>530</x>
-     <y>70</y>
-     <width>170</width>
-     <height>50</height>
+     <x>670</x>
+     <y>60</y>
+     <width>100</width>
+     <height>60</height>
     </rect>
    </property>
    <property name="text">
@@ -241,10 +241,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="loadImageBtn">
+  <widget class="QPushButton" name="loadImagePathBtn">
    <property name="geometry">
     <rect>
-     <x>950</x>
+     <x>955</x>
      <y>10</y>
      <width>65</width>
      <height>31</height>
@@ -257,9 +257,9 @@
   <widget class="QLineEdit" name="imagePathEdit">
    <property name="geometry">
     <rect>
-     <x>600</x>
+     <x>580</x>
      <y>10</y>
-     <width>340</width>
+     <width>370</width>
      <height>30</height>
     </rect>
    </property>
@@ -267,7 +267,7 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>530</x>
+     <x>520</x>
      <y>10</y>
      <width>60</width>
      <height>30</height>
@@ -314,6 +314,9 @@
     <property name="text">
      <string>0</string>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="maxEdit">
     <property name="geometry">
@@ -326,6 +329,9 @@
     </property>
     <property name="text">
      <string>0</string>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
@@ -353,6 +359,9 @@
     <property name="text">
      <string>0</string>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_8">
     <property name="geometry">
@@ -378,6 +387,9 @@
     </property>
     <property name="text">
      <string>0</string>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
@@ -405,6 +417,9 @@
     <property name="text">
      <string>0</string>
     </property>
+    <property name="readOnly">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
@@ -424,7 +439,7 @@
    <property name="geometry">
     <rect>
      <x>780</x>
-     <y>60</y>
+     <y>50</y>
      <width>100</width>
      <height>30</height>
     </rect>
@@ -436,8 +451,8 @@
   <widget class="QLineEdit" name="upLimitEdit">
    <property name="geometry">
     <rect>
-     <x>890</x>
-     <y>60</y>
+     <x>900</x>
+     <y>50</y>
      <width>120</width>
      <height>30</height>
     </rect>
@@ -455,7 +470,7 @@
   <widget class="QLineEdit" name="downLimitEdit">
    <property name="geometry">
     <rect>
-     <x>890</x>
+     <x>900</x>
      <y>100</y>
      <width>120</width>
      <height>30</height>
@@ -482,6 +497,32 @@
    </property>
    <property name="text">
     <string>边缘宽度下限:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="prevImgBtn">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>45</y>
+     <width>120</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>上一张图片</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="nextImgBtn">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>90</y>
+     <width>120</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>下一张图片</string>
    </property>
   </widget>
  </widget>
