--- a/glassDetect/res/glassdetectdlg.ui
+++ b/glassDetect/res/glassdetectdlg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1032</width>
+    <width>853</width>
     <height>768</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>500</width>
-     <height>500</height>
+     <height>400</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -28,186 +28,6 @@
    <property name="text">
     <string/>
    </property>
-  </widget>
-  <widget class="QPushButton" name="paramSettingBtn">
-   <property name="geometry">
-    <rect>
-     <x>670</x>
-     <y>60</y>
-     <width>100</width>
-     <height>60</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>参数设定</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="StartBtn">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>560</y>
-     <width>170</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>开始检测</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="stopBtn">
-   <property name="geometry">
-    <rect>
-     <x>300</x>
-     <y>640</y>
-     <width>170</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>停止检测</string>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="groupBox">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>520</y>
-     <width>271</width>
-     <height>201</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>检测结果</string>
-   </property>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>检测总数目(个):</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>65</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>检测合格数目(个):</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>115</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>检测排除数目(个):</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>160</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>检测合格率(%):</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="sumEdit">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>20</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="goodNumEdit">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>65</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="badNumEdit">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>115</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="goodPercentEdit">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>160</y>
-      <width>120</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0.000</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
   </widget>
   <widget class="QLabel" name="statusLabel">
    <property name="geometry">
@@ -225,305 +45,282 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="dstImageLabel">
+  <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>139</y>
-     <width>500</width>
-     <height>371</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(192, 192, 192);</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="loadImagePathBtn">
-   <property name="geometry">
-    <rect>
-     <x>955</x>
+     <x>530</x>
      <y>10</y>
-     <width>65</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>...</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="imagePathEdit">
-   <property name="geometry">
-    <rect>
-     <x>580</x>
-     <y>10</y>
-     <width>370</width>
-     <height>30</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>10</y>
-     <width>60</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>图片路径:</string>
-   </property>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_2">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>530</y>
-     <width>491</width>
-     <height>191</height>
+     <width>311</width>
+     <height>711</height>
     </rect>
    </property>
    <property name="title">
-    <string>数据:</string>
+    <string/>
    </property>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
-      <width>40</width>
+      <y>20</y>
+      <width>100</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
-     <string>Min</string>
+     <string>边缘宽度上限:</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="minEdit">
+   <widget class="QLineEdit" name="downLimitEdit">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>30</y>
-      <width>90</width>
+      <x>160</x>
+      <y>60</y>
+      <width>131</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
      <string>0</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLineEdit" name="maxEdit">
+   <widget class="QPushButton" name="prevImgBtn">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>70</y>
-      <width>90</width>
-      <height>30</height>
+      <x>160</x>
+      <y>105</y>
+      <width>131</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
-     <string>0</string>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
+     <string>上一张图片</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
+   <widget class="QPushButton" name="loadImagePathBtn">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
-      <width>40</width>
+      <y>105</y>
+      <width>130</width>
+      <height>85</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>加载图片</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>291</width>
+      <height>491</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>数据:</string>
+    </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>110</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>边缘宽度最小值:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="minEdit">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>30</y>
+       <width>120</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="maxEdit">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>70</y>
+       <width>120</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>110</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>边缘宽度最大值:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="meanEdit">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>110</y>
+       <width>120</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>110</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>边缘宽度平均值:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="diffEdit">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>160</y>
+       <width>120</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>160</y>
+       <width>110</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="toolTipDuration">
+      <number>-1</number>
+     </property>
+     <property name="text">
+      <string>边缘最大最小差值:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="evaluateEdit">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>200</y>
+       <width>120</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0</string>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>200</y>
+       <width>110</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>边缘宽度估计值:</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>100</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
-     <string>Max</string>
+     <string>边缘宽度下限:</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="meanEdit">
+   <widget class="QLineEdit" name="upLimitEdit">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>30</y>
-      <width>90</width>
+      <x>160</x>
+      <y>20</y>
+      <width>131</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
      <string>0</string>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>30</y>
-      <width>40</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Mean</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="diffEdit">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>70</y>
-      <width>90</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_9">
+   <widget class="QPushButton" name="nextImgBtn">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>70</y>
-      <width>40</width>
-      <height>30</height>
+      <x>160</x>
+      <y>150</y>
+      <width>131</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
-     <string>Diff</string>
+     <string>下一张图片</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="evaluateEdit">
-    <property name="geometry">
-     <rect>
-      <x>390</x>
-      <y>30</y>
-      <width>90</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>30</y>
-      <width>65</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Evaluate</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QLabel" name="label_11">
-   <property name="geometry">
-    <rect>
-     <x>780</x>
-     <y>50</y>
-     <width>100</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>边缘宽度上限:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="upLimitEdit">
-   <property name="geometry">
-    <rect>
-     <x>900</x>
-     <y>50</y>
-     <width>120</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>0</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="downLimitEdit">
-   <property name="geometry">
-    <rect>
-     <x>900</x>
-     <y>100</y>
-     <width>120</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>0</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-   </property>
-   <property name="readOnly">
-    <bool>true</bool>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_12">
-   <property name="geometry">
-    <rect>
-     <x>780</x>
-     <y>100</y>
-     <width>100</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>边缘宽度下限:</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="prevImgBtn">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>45</y>
-     <width>120</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>上一张图片</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="nextImgBtn">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>90</y>
-     <width>120</width>
-     <height>40</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>下一张图片</string>
-   </property>
   </widget>
  </widget>
  <resources/>
