--- a/glassDetect/res/glassdetectdlg.ui
+++ b/glassDetect/res/glassdetectdlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>853</width>
-    <height>768</height>
+    <height>738</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,14 @@
   <widget class="QLabel" name="imageViewLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>0</x>
+     <y>0</y>
      <width>500</width>
      <height>400</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 0, 0);</string>
+    <string notr="true">background-color: #333;</string>
    </property>
    <property name="text">
     <string/>
@@ -33,7 +33,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>730</y>
+     <y>700</y>
      <width>1024</width>
      <height>38</height>
     </rect>
@@ -49,9 +49,9 @@
    <property name="geometry">
     <rect>
      <x>530</x>
-     <y>10</y>
+     <y>5</y>
      <width>311</width>
-     <height>711</height>
+     <height>681</height>
     </rect>
    </property>
    <property name="title">
@@ -121,7 +121,7 @@
       <x>10</x>
       <y>210</y>
       <width>291</width>
-      <height>491</height>
+      <height>461</height>
      </rect>
     </property>
     <property name="title">
