--- a/glassDetect/res/glassdetectdlg.ui
+++ b/glassDetect/res/glassdetectdlg.ui
@@ -299,10 +299,11 @@
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(0, 0, 0);
-font: 75 12pt &quot;green&quot; &quot;宋体&quot;;</string>
+font: 75 14pt &quot;Consolas&quot;;
+color : #00EC00;</string>
      </property>
      <property name="text">
-      <string>11</string>
+      <string>None</string>
      </property>
     </widget>
    </widget>
