--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -460,7 +460,7 @@
    <widget class="QLineEdit" name="groupCountEdit">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>110</x>
       <y>40</y>
       <width>120</width>
       <height>35</height>
@@ -517,18 +517,18 @@
      <rect>
       <x>20</x>
       <y>40</y>
-      <width>65</width>
+      <width>85</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
-     <string>设置分组:</string>
+     <string>设置螺丝分组:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>240</x>
       <y>40</y>
       <width>100</width>
       <height>35</height>
