--- a/serialCom/serialcom/res/serialCom.ui
+++ b/serialCom/serialcom/res/serialCom.ui
@@ -167,12 +167,12 @@
      <rect>
       <x>20</x>
       <y>180</y>
-      <width>111</width>
+      <width>105</width>
       <height>35</height>
      </rect>
     </property>
     <property name="text">
-     <string>拧紧角度(degree):</string>
+     <string>拧紧角度(度):</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
